--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "sweetalert2": "^11.4.4",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
